# breakout

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: game.c  game.h  main.c
src/utils/: vec2.c  vec2.h
